crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_single_stmt_fn.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# short_fn()
# scope 8..8

   8  |     single_call()
