crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_single_stmt_fn.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# short_fn()
# scope 8..8

   8  |     single_call()
