crates/moire-source-context/src/snapshots/moire_source_context__tests__closure_inside_function.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn outer()
# scope 3..11

   3  |     let closure = || {
      | ...
   7 >|         let target = 40;
      | ...
  11  |     };
