crates/moire-source-context/src/snapshots/moire_source_context__tests__closure_inside_function.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn outer()
# scope 3..11

   3 |     let closure = || {
     | ...
   6 |         let c = 30;
   7 |         let target = 40;
   8 |         let e = 50;
     | ...
  11 |     };
