crates/moire-source-context/src/snapshots/moire_source_context__tests__compact_keeps_target_statement_neighbors.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn example()
# scope 3..5

   3 |     let b = 2;
   4 |     let target = 3;
   5 |     let d = 4;
