crates/moire-source-context/src/snapshots/moire_source_context__tests__compact_redacts_async_move_body.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# async run() -> Result<(), String>
# scope 3..10

   3 >|     spawn(async move {
      | ...
   9  |     })
  10  |     .named("bounded_sender");
