crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_free_function.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn run()
# scope 3..3

   3 |     spawn(async move { a });
