crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_free_function.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn run()
# scope 2..3

   2 |     let a = 1;
   3 |     spawn(async move { a });
