crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_generic_impl.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# Queue<T>::fn push(&mut self, value: T)
# scope 4..4

   4 |         spawn(async move { value });
