crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_generic_impl.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# Queue<T>::fn push(&mut self, value: T)
# scope 4..4

   4 |         spawn(async move { value });
